--- a/qgcresources.qrc
+++ b/qgcresources.qrc
@@ -52,6 +52,8 @@
 
         <file alias="StatusBattery">resources/StatusBattery.svg</file>
         <file alias="AreaIndicator">resources/AreaIndicator.svg</file>
+         <file alias="BollSmall">resources/BollSmall.svg</file>
+          <file alias="BollLarge">resources/BollLarge.svg</file>
 
     </qresource>
     <qresource prefix="/res/firmware">
